# adk-samples

adk-sample/: README.md  check_bigquery-auth.py  delete_agent_engine.py  list_agent.py  main.py  mise.toml  pyproject.toml  run_agent_engine.py
adk-sample/data_analysis_agent/: agent.py  agent_with_api.py  tools.py
agents/llm-auditor/: pyproject.toml
agents/personalized-shopping/: pyproject.toml
agents/personalized-shopping/personalized_shopping/: prompt.py
japanese_weather_agent/: .env.example  README.md  SETUP.md  deploy_to_vertex.py  pyproject.toml
japanese_weather_agent/japanese_weather_agent/: agent.py  prompt.py
japanese_weather_agent/japanese_weather_agent/tools/: __init__.py  weather_tool.py
